--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
 </head>
 <body>
     <main>
-
+<section id="container">
+ <article class="cartao">
+  <div class="cartao__conteudo"> </div>
+  <h3>programação</h3>
+ </div>
+ </article>
+</section>
+<article class="cartao">
+  <div class="cartao__conteudo">
+    <h3>programação</h3>
+    <div class="cartao__conteudo__pergunta">
+        o que é JavaScript?
+    </div>
     </main>
 
     <footer>
-
+      <p>projeto desensolvido pela beatriz araujo, sem fins lucrativos</p>
     </footer>
 </body>
 </html>
