--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard</title>
     <link rel="stylesheet" href="flashcards/style.css">
-</head>
 <body>
     <main>
-<section id="container">
- <article class="cartao">
-  <div class="cartao__conteudo"> </div>
-  <h3>programação</h3>
- </div>
- </article>
-</section>
-<article class="cartao">
-  <div class="cartao__conteudo">
-    <h3>programação</h3>
-    <div class="cartao__conteudo__pergunta">
-        o que é JavaScript?
-    </div>
-    </main>
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo"> </div>
+                    <h3>programação</h3>
+            </div class="cartao__conteudo__pergunta">
+                    o que é JavaScript?
+                </div>
+                <div class="cartao__conteudo__responda"></div>
+                o javaSscript é uma linguagem de progamação
+            </div>
+            </div>
+            </article>
+          </section>
+       </main>
 
-    <footer>
-      <p>projeto desensolvido pela beatriz araujo, sem fins lucrativos</p>
-    </footer>
-</body>
-</html>
-￼E-mail ou telefone
+      </footer>
+           <p>Projeto desensolvido por beatriz araujo</p>
+      </footer>
+ </body>
+ </html>
+
+
+ 
