--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
             </article>
           </section>
        </main>
-
-    </footer>
-           <p>Projeto desensolvido por beatriz araujo</p>
-      </footer>
+       <footer><p>Projeto desensolvido por beatriz araujo</p></footer>
  </body>
  </html>
 
