--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
        <footer><p>Projeto desensolvido por beatriz araujo</p></footer>
  </body>
  </html>
+ <article class="cartao">
+ <div class="cartao__conteudo">
+ <h3>Programação</h3>
+ <div class="caratao__conteudo__resposta">
+    o que é CSS?
+ </div>
+ </div class="cartao__conteudo__resposta">
+  o CSS é uma linguagem de estilização.
+  </div>
+ </div>
+</article>
 
 
  
