--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo"> </div>
-                    <h3>programação</h3>
+                    <h3>PROGRAMAÇÃO</h3>
             </div class="cartao__conteudo__pergunta">
                     o que é JavaScript?
                 </div>
