--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 <div class="cartao__conteudo"> </div>
                     <h3>PROGRAMAÇÃO</h3>
             </div class="cartao__conteudo__pergunta">
-                    o que é JavaScript?
+                    O que é JavaScript?
                 </div>
                 <div class="cartao__conteudo__responda"></div>
-                o javaSscript é uma linguagem de progamação
+                O JavaSscript é uma linguagem de progamação
             </div>
             </div>
             </article>
