--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
             </div>
             </div>
             </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                <h3>PROGRAMAÇÃO</h3>
+                <div class="caratao__conteudo__resposta">
+                   O que é CSS?
+                </div>
+                </div class="cartao__conteudo__resposta">
+                 O CSS é uma linguagem de estilização.
+                 </div>
+                </div>
+               </article>
           </section>
        </main>
        <footer><p>Projeto desensolvido por beatriz araujo</p></footer>
  </body>
  </html>
- <article class="cartao">
- <div class="cartao__conteudo">
- <h3>Programação</h3>
- <div class="caratao__conteudo__resposta">
-    o que é CSS?
- </div>
- </div class="cartao__conteudo__resposta">
-  o CSS é uma linguagem de estilização.
-  </div>
- </div>
-</article>
+ 
 
 
  
