--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 <div class="cartao__conteudo"> </div>
                     <h3>PROGRAMAÇÃO</h3>
             </div class="cartao__conteudo__pergunta">
-                    O que é JavaScript?
+                    <p>O que é JavaScript?</p>
                 </div>
                 <div class="cartao__conteudo__responda"></div>
-                O JavaSscript é uma linguagem de progamação
+                <p>O JavaSscript é uma linguagem de progamação</p>
             </div>
             </div>
             </article>
@@ -23,10 +23,10 @@
                 <div class="cartao__conteudo">
                 <h3>PROGRAMAÇÃO</h3>
                 <div class="caratao__conteudo__resposta">
-                   O que é CSS?
+                   <p>O que é CSS?</p>
                 </div>
                 </div class="cartao__conteudo__resposta">
-                 O CSS é uma linguagem de estilização.
+                 <p>O CSS é uma linguagem de estilização.</p>
                  </div>
                 </div>
                </article>
