--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <main>
         <section id="container">
             <article class="cartao">
-                <div class="cartao__conteudo"> </div>
+                <div class="cartao__conteudo">
                     <h3>PROGRAMAÇÃO</h3>
             </div class="cartao__conteudo__pergunta">
                     <p>O que é JavaScript?</p>
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
+                <div class="cartao__conteudo__resposta">
                 <p>O JavaSscript é uma linguagem de progamação</p>
             </div>
             </div>
