--- a/index.html
+++ b/index.html
@@ -3,39 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcard</title>
+    <title>Flashcards</title>
     <link rel="stylesheet" href="flashcards/assets/style.css">
+</head>
+
 <body>
     <main>
         <section id="container">
             <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>PROGRAMAÇÃO</h3>
-            </div class="cartao__conteudo__pergunta">
-                    <p>O que é JavaScript?</p>
+                <div class=”cartao__conteudo”> 
+                    <h3>Programação</h3>
+                    <div class=”cartao__conteudo__pergunta”>
+                        <p>O que é JavaScript?</p>
+                    </div>
+                    <div class=”cartao__conteudo__resposta”>
+                        <p>O JavaScript é uma linguagem de programação.</p>
+                    </div>
                 </div>
-                <div class="cartao__conteudo__resposta">
-                <p>O JavaSscript é uma linguagem de progamação</p>
-            </div>
-            </div>
+            </article>
+
+            <article class="cartao">
+                <div class=”cartao__conteudo”> 
+                    <h3>Programação</h3>
+                    <div class=”cartao__conteudo__pergunta”>
+                        <p> O que é CSS?</p>
+                    </div>
+                    <div class=”cartao__conteudo__resposta”>
+                        <p>  O CSS é uma linguagem de estilização.</p>
+                    </div>
+                </div>
             </article>
             <article class="cartao">
-                <div class="cartao__conteudo">
-                <h3>PROGRAMAÇÃO</h3>
-                <div class="cartao__conteudo__pergunta">
-                   <p>O que é CSS?</p>
+                <div class=”cartao__conteudo”> 
+                    <h3>Programação</h3>
+                    <div class=”cartao__conteudo__pergunta”>
+                        <p> O que é HTML?</p>
+                    </div>
+                    <div class=”cartao__conteudo__resposta”>
+                        <p>O HTML é uma linguagem de marcação.</p>
+                    </div>
                 </div>
-                </div class="cartao__conteudo__resposta">
-                 <p>O CSS é uma linguagem de estilização.</p>
-                 </div>
-                </div>
-               </article>
-          </section>
-       </main>
-       <footer><p>Projeto desensolvido por beatriz araujo</p></footer>
- </body>
- </html>
- 
+            </article>
+        </section>
+    </main>
 
-
- 
+    <footer>
+        <p>Projeto desenvolvido por Beatriz Araujo</p>
+    </footer>
+</body>
+</html>
