--- a/index.html
+++ b/index.html
@@ -3,52 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcards</title>
+    <title>Flashcard</title>
     <link rel="stylesheet" href="flashcards/assets/style.css">
-</head>
-
 <body>
     <main>
         <section id="container">
             <article class="cartao">
-                <div class=”cartao__conteudo”> 
-                    <h3>Programação</h3>
-                    <div class=”cartao__conteudo__pergunta”>
-                        <p>O que é JavaScript?</p>
-                    </div>
-                    <div class=”cartao__conteudo__resposta”>
-                        <p>O JavaScript é uma linguagem de programação.</p>
-                    </div>
+                <div class="cartao__conteudo">
+                    <h3>PROGRAMAÇÃO</h3>
+            </div class="cartao__conteudo__pergunta">
+                    <p>O que é JavaScript?</p>
                 </div>
-            </article>
-
-            <article class="cartao">
-                <div class=”cartao__conteudo”> 
-                    <h3>Programação</h3>
-                    <div class=”cartao__conteudo__pergunta”>
-                        <p> O que é CSS?</p>
-                    </div>
-                    <div class=”cartao__conteudo__resposta”>
-                        <p>  O CSS é uma linguagem de estilização.</p>
-                    </div>
-                </div>
+                <div class="cartao__conteudo__resposta">
+                <p>O JavaSscript é uma linguagem de progamação</p>
+            </div>
+            </div>
             </article>
             <article class="cartao">
-                <div class=”cartao__conteudo”> 
-                    <h3>Programação</h3>
-                    <div class=”cartao__conteudo__pergunta”>
-                        <p> O que é HTML?</p>
-                    </div>
-                    <div class=”cartao__conteudo__resposta”>
-                        <p>O HTML é uma linguagem de marcação.</p>
-                    </div>
+                <div class="cartao__conteudo">
+                <h3>PROGRAMAÇÃO</h3>
+                <div class="cartao__conteudo__pergunta">
+                   <p>O que é CSS?</p>
                 </div>
-            </article>
-        </section>
-    </main>
+                </div class="cartao__conteudo__resposta">
+                 <p>O CSS é uma linguagem de estilização.</p>
+                 </div>
+                </div>
+               </article>
+          </section>
+       </main>
+       <footer><p>Projeto desensolvido por beatriz araujo</p></footer>
+ </body>
+ </html>
+ 
 
-    <footer>
-        <p>Projeto desenvolvido por Beatriz Araujo</p>
-    </footer>
-</body>
-</html>
+
+ 
